Add an export command (MAVEN_OPTS).